fixed left-side navbar collapse button size

--- a/webapp/content/css/dashboard.css
+++ b/webapp/content/css/dashboard.css
@@ -73,6 +73,11 @@ img.graph-img {
 /* Customize the size of the split bar toggle button */
 .x-layout-split {
   height: 10px;
+  width: 10px;
+}
+
+.x-layout-cmini-west, .x-layout-cmini-east {
+  width: 10px !important;
 }
 
 .x-layout-split-north .x-layout-mini {
@@ -85,8 +90,19 @@ img.graph-img {
   background-image: url(/content/img/mini-bottom2.gif);
 }
 
+.x-layout-split-east .x-layout-mini {
+  width: 10px !important;
+  background-image: url(/content/img/mini-right2.gif);
+}
+
+.x-layout-split-west .x-layout-mini {
+  width: 10px !important;
+  background-image: url(/content/img/mini-left2.gif);
+}
+
 .x-layout-cmini-north {
   height: 10px !important;
+  width: 10px !important;
 }
 
 .x-layout-cmini-north .x-layout-mini {
@@ -95,6 +111,16 @@ img.graph-img {
 }
 
 .x-layout-cmini-south .x-layout-mini {
-  height: 10px;
+  height: 10px !important;
   background-image: url(/content/img/mini-top2.gif);
+}
+
+.x-layout-cmini-east .x-layout-mini {
+  width: 10px !important;
+  background-image: url(/content/img/mini-left2.gif);
+}
+
+.x-layout-cmini-west .x-layout-mini {
+  width: 10px !important;
+  background-image: url(/content/img/mini-right2.gif);
 }
